Fix filename and popover menu misalignment

--- a/apps/files/css/mobile.scss
+++ b/apps/files/css/mobile.scss
@@ -8,11 +8,6 @@ $min-table-width: 688px;
 	background-color: rgba(255, 255, 255, 1)!important;
 }
 
-#body-user #filestable {
-	min-width: 250px;
-	display: initial;
-}
-
 table th#headerSize,
 table td.filesize,
 table th#headerDate,
